fixed an issue with the weblink alignment.
changed the dlivery tab, as speech marks were left in somehow

--- a/Css/style.css
+++ b/Css/style.css
@@ -9,6 +9,7 @@ body
 	height:auto;
 	margin:auto;
 	padding:5px;
+	align:center;
 }
 #mainbox
 {
